<resources>
    <string name="app_name">Dialog</string>
    <string name="normal_dialog">简单对话框</string>
    <string name="list_dialog">简单列表对话框</string>
    <string name="single_choice_dialog">单选列表对话框</string>
    <string name="multi_choice_dialog">多选列表对话框</string>
    <string name="progress_dialog">进度条对话框</string>
    <string name="edit_dialog">编辑对话框</string>
    <string name="custom_dialog">自定义对话框</string>
    <string name="custom_dialog_msg">这是一个自定义对话框</string>
</resources>
