<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gui.abc.dialog.MainActivity">

    <Button
        android:id="@+id/btn_normal_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_dialog"/>
    <Button
        android:id="@+id/btn_list_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_dialog"
        />
    <Button
        android:id="@+id/btn_single_choice_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_choice_dialog"
        />
    <Button
        android:id="@+id/btn_multi_choice_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multi_choice_dialog"
        />
    <Button
        android:id="@+id/btn_progress_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_dialog"
        />
    <Button
        android:id="@+id/btn_edit_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_dialog"
        />
    <Button
        android:id="@+id/btn_custom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog"
        />
</LinearLayout>
